--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
+
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -76,5 +78,6 @@ dependencies {
     implementation "androidx.datastore:datastore:1.0.0"
     implementation "androidx.preference:preference-ktx:1.2.0"
 
+    implementation 'androidx.multidex:multidex:2.0.1'
 
 }
