--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 
     implementation "com.google.protobuf:protobuf-javalite:3.11.0"
     implementation "androidx.datastore:datastore:1.0.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.preference:preference-ktx:1.2.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
