--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id "com.google.protobuf" version "0.8.12"
     id("kotlin-parcelize")
+    id 'kotlin-kapt'
 }
 
 android {
@@ -62,7 +63,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
@@ -81,5 +82,9 @@ dependencies {
     implementation "androidx.preference:preference-ktx:1.2.0"
 
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    implementation 'androidx.room:room-runtime:2.5.0'
+    kapt 'androidx.room:room-compiler:2.5.0'
+    implementation "androidx.room:room-ktx:2.5.0"
 
 }
